samples/_failures_safe/1761392666_b91929_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4a012e4b.c: In function ‘main’:
./samples/SAFE/__tmp_4a012e4b.c:129:12: error: missing terminating " character
  129 |     printf("\nEnter values
      |            ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4a012e4b.c:129:5: error: expected expression at end of input
  129 |     printf("\nEnter values
      |     ^~~~~~
./samples/SAFE/__tmp_4a012e4b.c:129:5: error: expected declaration or statement at end of input
